objects/Lead.object
<CustomObject>
    <fields>
        <fullName>vfirst__Verification_Report_m__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, 

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	)
,
	IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:partial&apos;,

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	) 
	,
	IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Binactive.png&apos;, &apos;Not Ready &apos;,16,16))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verification Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__of_Background_Checks_Ordered__c</fullName>
        <formula>vfirst__Site_Guest_Access_Helper__r.vfirst__of_Background_Checks_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Background Checks Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BirthDate__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReferredByContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact who referred this lead.</description>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referred By)</relationshipLabel>
        <relationshipName>ReferredLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>NewLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Leads</label>
    </listViews>
    <listViews>
        <fullName>New_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Internal_Lead</fullName>
        <active>true</active>
        <businessProcess>Internal</businessProcess>
        <description>Leads generated by Contracting, Producer Onboarding, or Producer Support.</description>
        <label>Internal Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>List_Bill</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>List Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Lead</fullName>
        <active>true</active>
        <businessProcess>Member Lead</businessProcess>
        <description>Leads generated by Member Enrollment</description>
        <label>Member Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Lead</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <description>Leads generated by the Sales Team.</description>
        <label>Sales Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Address_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
	ISBLANK(Address)
	)</errorConditionFormula>
        <errorDisplayField>Address_Type__c</errorDisplayField>
        <errorMessage>Address Cannot be Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Affinity_Level_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(Status, &quot;Converted&quot;),
ISPICKVAL(Contract_Type__c, &quot;Affinity&quot;),
NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)),

OR
(
ISPICKVAL(Contract_Level__c , &quot;3&quot;),
ISPICKVAL(Contract_Level__c , &quot;4&quot;),
ISPICKVAL(Contract_Level__c , &quot;5&quot;)
)
)</errorConditionFormula>
        <errorMessage>Leads with contract type &apos;Affinity&apos; and contract level greater than 3 should be &apos;Submitted for Approval&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Level_19_needs_approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(Status, &quot;Converted&quot;),
ISPICKVAL(Contract_Type__c, &quot;Producer&quot;),
ISBLANK(TEXT(Approval_Status__c)),

OR
(
ISPICKVAL(Contract_Level__c , &quot;19%&quot;),
ISPICKVAL(Contract_Level__c , &quot;20%&quot;),
ISPICKVAL(Contract_Level__c , &quot;21%&quot;)
)
)</errorConditionFormula>
        <errorMessage>Leads with contract type &apos;Producer&apos; and contract level greater than 19% should be &apos;Submitted for Approval&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ethnicity_DG_PL_fields_req_before_conv</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name =  &quot;Sales Lead&quot;,
ISPICKVAL(Status, &quot;Converted&quot;),
OR
(
ISBLANK(TEXT(Ethnicity__c)),
ISBLANK(Demographic_Groups__c),
ISBLANK(TEXT(Preferred_Language__c))
)
)</errorConditionFormula>
        <errorMessage>Demographic groups, Preferred Language and Ethnicity fields need to be filled before converting a Sales lead to an opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_name_cannot_be_blank</fullName>
        <active>true</active>
        <description>The First Name field cannot be blank.</description>
        <errorConditionFormula>AND(
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
	ISBLANK(FirstName)
	)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>The First Name field cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Management_level_only_for_Sales_Execs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Contract_Type__c, &quot;Management&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Sales Executive&quot;
)</errorConditionFormula>
        <errorDisplayField>Contract_Type__c</errorDisplayField>
        <errorMessage>Only Sales Executives can Save a lead with the Management Contract Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_phone_and_email_to_convert</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 ISPICKVAL(Status, &quot;Converted&quot;),
 OR
 (
  ISBLANK(Phone),
  ISBLANK(Email)
 )
)</errorConditionFormula>
        <errorMessage>You must provide a phone number and email address before converting this lead to an opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Needs_lead_lost_reason</fullName>
        <active>true</active>
        <description>When a lead is lost there must be a lost reason.</description>
        <errorConditionFormula>AND(
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
	ISPICKVAL(Status, &quot;Lead Lost&quot;),
	ISBLANK(TEXT(Lead_Lost_Reason__c))
	)</errorConditionFormula>
        <errorDisplayField>Lead_Lost_Reason__c</errorDisplayField>
        <errorMessage>You must select a Lead Lost Reason before the lead can be lost.</errorMessage>
    </validationRules>
</CustomObject>